Ufa! Terminei a API das classes...
